test/classes/delete-free/tests-from-design-overview/lifetime-checking.good
lifetime-checking.chpl:11: In function 'test':
lifetime-checking.chpl:11: error: Illegal return of dead value
lifetime-checking.chpl:16: note: 'a' is dead due to deinitialization here
lifetime-checking.chpl:16: error: Scoped variable c cannot be returned
lifetime-checking.chpl:12: note: consider scope of a
